--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-    <link rel="stylesheet" href="/src/styles/valhalla.css">
-</head>
+    <title>Forge of Valhalla</title>
+    <style>
+      :root { color-scheme: dark; }
+      body { margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; background:#0a0a0a; color:#e5e5e5; }
+      nav { position: sticky; top:0; background:#000; padding:.75rem; display:flex; gap:1rem; }
+      nav a { color:#fff; text-decoration:none; font-size:14px; }
+      .container { padding:1rem; }
+      .card { background:#111; border-radius:12px; padding:12px; margin-bottom:12px; }
+      .btn { background:#fff; color:#000; border:none; border-radius:10px; padding:.75rem; width:100%; font-weight:600; cursor:pointer; }
+      .btn:disabled { opacity:.6; cursor:not-allowed; }
+      .input, .select { width:100%; background:#151515; border:1px solid #222; color:#eee; border-radius:10px; padding:.75rem; margin-bottom:.5rem; }
+      .muted { font-size:12px; opacity:.7; }
+      .title { font-size:20px; font-weight:700; margin-bottom:.5rem; }
+      .big { font-size:28px; font-weight:800; }
+      .error { color:#f87171; }
+    </style>
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
