git push origin main Push current working Forge of Valhalla to Netlify for production

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
       .big { font-size:28px; font-weight:800; }
       .error { color:#f87171; }
     </style>
-  </head>
+    <script type="module" src="/src/devCrashGuard.js"></script>
+</head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
