--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </style>
     <script type="module" src="/src/devCrashGuard.js"></script>
 </head>
-  <body>
+  <body class="dark">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
